# conway

./: .gitignore  Cargo.toml  README.md  notes.txt
src/: main.rs  sketch.rs
