[package]
name = "conway"
version = "0.1.0"
authors = ["Andy <19520383+LeCyberDucky@users.noreply.github.com>"]
edition = "2018"

[dependencies]
iced = { version = "0.2.0", features = ["image", "canvas", "tokio", "debug"] }
rand = "0.8.0"
rgb = { version = "0.8.25", features = [] }
image = "0.23.12"
tokio = { version = "0.3", features = ["sync"] }
itertools = "0.9"
rustc-hash = "1.1"
crossbeam-channel = "0.5.0"
anyhow = "1.0.37"
chrono = "0.4.19"
